--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <a href="#" class="secondary-button">Download Brochure</a>
         </div>
         <div class="header-right">
-          <img src="/Images/companylogo.png" alt="Hero image" />
+          <img src="Images/companylogo.png" alt="Hero image" />
         </div>
       </div>
     </header>
