--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Hype.Agency</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="mediaqueries.css" />
-    <link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="Images/favicon.ico" />
   </head>
   <body>
     <!-- nav bar -->
@@ -119,7 +119,7 @@
     <section class="big-feature-section">
       <div class="container flex big-feature-container" id="second-big-feature">
         <div class="feature-img">
-          <img src="/Images/service (1).png" alt="" />
+          <img src="Images/service (1).png" alt="" />
         </div>
         <div class="feature-text flex">
           <h3>Web Designing</h3>
@@ -172,7 +172,7 @@
     <section class="big-feature-section">
       <div class="container flex big-feature-container">
         <div class="feature-img">
-          <img class="feature-img-odd" src="/Images/service (2).png" alt="" />
+          <img class="feature-img-odd" src="Images/service (2).png" alt="" />
         </div>
         <div class="feature-text flex">
           <h3>Graphics Designing</h3>
@@ -224,7 +224,7 @@
     <section class="big-feature-section">
       <div class="container flex big-feature-container" id="second-big-feature">
         <div class="feature-img">
-          <img src="/Images/service (3).png" alt="" />
+          <img src="Images/service (3).png" alt="" />
         </div>
         <div class="feature-text flex">
           <h3>Video Editing</h3>
@@ -276,7 +276,7 @@
     <section class="big-feature-section">
       <div class="container flex big-feature-container">
         <div class="feature-img">
-          <img class="feature-img-odd" src="/Images/service (4).png" alt="" />
+          <img class="feature-img-odd" src="Images/service (4).png" alt="" />
         </div>
         <div class="feature-text flex">
           <h3>Social Media Management</h3>
@@ -331,7 +331,7 @@
     <section class="big-feature-section">
       <div class="container flex big-feature-container" id="second-big-feature">
         <div class="feature-img">
-          <img src="/Images/service (5).png" alt="" />
+          <img src="Images/service (5).png" alt="" />
         </div>
         <div class="feature-text flex">
           <h3>Advertising</h3>
