--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <section class="big-feature-section">
       <div class="container flex big-feature-container">
         <div class="feature-img">
-          <img class="feature-img-odd" src="/Images/service (6).png" alt="" />
+          <img class="feature-img-odd" src="Images/service (6).png" alt="" />
         </div>
         <div class="feature-text flex">
           <h3>Web Development</h3>
